# mvplayer

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: tests.yml
apps/: CMakeLists.txt
apps/demo/: CMakeLists.txt  main.cpp
apps/opengl-triangle/: CMakeLists.txt  main.cpp
apps/simple-app/: CMakeLists.txt  main.cpp
apps/simple-opengl/: CMakeLists.txt  main.cpp
apps/video-player/: CMakeLists.txt  main.cpp
include/: FrameRenderer.hpp  SdlManager.hpp  VideoReader.hpp  info.hpp  player.hpp  renderer.hpp  sdl_manager.hpp  utils.hpp  video_reader.hpp
include/multithreaded/: connector.hpp  engine.hpp  processor.hpp
include/multithreaded/connector/: connector.hpp
include/multithreaded/connector/read/: any.hpp  event_port.hpp  port.hpp
include/multithreaded/connector/write/: any.hpp  event_port.hpp  port.hpp
include/multithreaded/engine/: engine.hpp  utils.hpp
include/multithreaded/events/: envelope.hpp  handler.hpp
include/multithreaded/processor/: any.hpp  interruptible.hpp  pre_event_handler.hpp  processor.hpp  termination_handler.hpp
include/multithreaded/utils/: constants.hpp  queue.hpp  traits.hpp
include/mvplayer/: audio_context.hpp  audio_renderer.hpp  error.hpp  events.hpp  frame_pool.hpp  frame_renderer.hpp  info.hpp  media_context.hpp  sdl_manager.hpp  video_reader.hpp
include/mvplayer/renderer/: base.hpp  channel_plane.hpp  factory.hpp
include/mvplayer/renderer/rgb/: renderer.hpp  shader_spec.hpp
include/mvplayer/renderer/yuvp/: renderer.hpp  shader_spec.hpp
include/mvplayer/renderer/yuvp8/: renderer.hpp  shader_spec.hpp
include/mvplayer/utils/: constants.hpp  conversion.hpp  owned.hpp  yuv_frame.hpp
include/opengl/: index_buffer.hpp  pixel_buffer.hpp  shader.hpp  texture.hpp  vertex_array.hpp  vertex_buffer.hpp
include/utils/: conversion.hpp  owned.hpp  queue.hpp
profiles/: profile_linux_clang  profile_linux_gcc  profile_linux_x86
scripts/: build-debug.sh  build-linux-debug.sh  build-linux-release.sh  build-release.sh  build-win-debug.sh  build-win-release.sh
src/: FrameRenderer.cpp  VideoReader.cpp  player.cpp  renderer.cpp  utils.cpp  video_reader.cpp
src/multithreaded/: engine.cpp
src/multithreaded/engine/: engine.cpp
src/mvplayer/: audio_context.cpp  audio_renderer.cpp  frame_pool.cpp  frame_renderer.cpp  media_context.cpp  video_reader.cpp
src/mvplayer/renderer/: base.cpp  channel_plane.cpp  factory.cpp
src/mvplayer/renderer/rgb/: renderer.cpp
src/mvplayer/renderer/yuvp/: renderer.cpp
src/mvplayer/renderer/yuvp8/: renderer.cpp
src/mvplayer/utils/: conversion.cpp  owned.cpp
src/opengl/: index_buffer.cpp  pixel_buffer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
src/utils/: conversion.cpp  owned.cpp
tests/: CMakeLists.txt
tests/multithreaded/: engine_tests.cpp  multithreaded_tests.cpp
tests/multithreaded/utils/: queue_test.cpp
tests/mvplayer/: conversion_tests.cpp  error_tests.cpp  frame_pool_tests.cpp  info_tests.cpp  media_context_tests.cpp  renderer_tests.cpp
tests/opengl/: opengl_tests.cpp
tests/utils/: queue_test.cpp
